--- a/model/mpd.html
+++ b/model/mpd.html
@@ -29,6 +29,7 @@
 	<text x="5" y="20">view</text>
 	<text x="5" y="50" class="primary_key">id (PK)</text>
 	<text x="5" y="70">name</text>
+	<text x="5" y="90">text</text>
 </g>
 
 <!-- Area -->
