Setting more compact view

--- a/WebContent/forms/viewItem.html
+++ b/WebContent/forms/viewItem.html
@@ -23,8 +23,8 @@
 	</div>
 </fieldset>
 <hr/>
-<button class="btn btn-primary" type="button" nnnonclick='deleteItem(currentItem.id);' id="viewItemDeleteButton"><img src='images/92.png'/> update</button>
-<button class="btn btn-danger" type="button" onclick='deleteItem(currentItem.id);' id="viewItemDeleteButton"><img src='images/14.png'/> delete</button>
+<button class="btn btn-primary btn-sm" type="button" nnnonclick='deleteItem(currentItem.id);' id="viewItemDeleteButton"><img src='images/92.png'/> update</button>
+<button class="btn btn-danger btn-sm" type="button" onclick='deleteItem(currentItem.id);' id="viewItemDeleteButton"><img src='images/14.png'/> delete</button>
 </form>
 <script>
 	$(function(){
