--- a/WebContent/forms/createItem.html
+++ b/WebContent/forms/createItem.html
@@ -4,22 +4,24 @@
 		<fieldset class="form-group">
 			<legend>Item fields</legend>
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemName">Name</label>
+				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemName">Name*</label>
 				<div class="col-10">
 					<input class="form-control form-control-sm" type="text" id="createItemName" onchange="createItemOnNameChange()"/>
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemCategory">Category</label>
+				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemCategory">Category*</label>
 				<div class="col-10">
 					<select class="form-control form-control-sm" type="text" id="createItemCategory" onchange="createItemOnCategoryChange()"/>
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemClass">Class</label>
+				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemClass">Class*</label>
 				<div class="col-10">
-					<select class="form-control form-control-sm" type="text" id="createItemClass" />
+					<select class="form-control form-control-sm" type="text" id="createItemClass" onchange="createItemApplyClass()"/>
 				</div>
+			</div>
+			<div id="createItemAdditionalProperties">
 			</div>
 		</fieldset>
 		<hr/>
@@ -49,10 +51,34 @@
 		}
 		function createItemValidate(){
 			var name 		= $("#createItemName").val();
+			if (name.trim() == ""){
+				sendMessage("warning","Missing value for required property 'Name'");
+				$("#createItemName").focus();
+				return;
+			}
 			var className 	= $("#createItemClass").val();
 			var data = {
 				"name"		 : name,
 				"class_name" : className
+			}
+			var classId = $("#createItemClass").val();
+			var clazz = classesById[classId];
+			var value;
+			var property;
+			console.log("properties "+clazz.name);
+			for (var p = 0; p < clazz.properties.length; p++){
+				property = clazz.properties[p];
+				console.log(property.name);
+				value = $("#createItemAdditionalProperty"+p).val();
+				if (value == ""){
+					if (property.required == true){
+						sendMessage("warning","Missing value for required property '"+property.label+"'");
+						$("#createItemAdditionalProperty"+p).focus();
+						return;
+					}
+				} else {
+					data[property.name] = value;
+				}
 			}
 			$.ajax({
 				type 	: "POST",
@@ -66,6 +92,71 @@
 				sendMessage("error","Unable to create element : "+error);
 			});
 		}
+		function createItemApplyClass(){
+			var classId = $("#createItemClass").val();
+			var clazz = classesById[classId];
+			var html = "";
+			var property;
+			var required = null;
+			var label = null;
+			for (var p = 0; p < clazz.properties.length; p++){
+				property = clazz.properties[p];
+				html+='<div class="form-group row">';
+				label = property.label;
+				if (property.required == true){
+					required = " required='true'";
+					label += "*";
+				} else {
+					required = "";
+				}
+				html+='	<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemAdditionalProperty'+p+'">'+label+'</label>';
+				html+='	<div class="col-10">';
+				if (property.type == 'integer'){
+					html+='	<input class="form-control form-control-sm" type="integer" id="createItemAdditionalProperty'+p+'"'+required+'/>';
+				} else if (property.type.startsWith('area(')){
+					var viewName = property.type.substring('area('.length,property.type.length-1);
+					var areas = null;
+					var view = null;
+					for (var v = 0; v < global.views.length; v++){
+						view = global.views[v];
+						if (view.name == viewName){
+							areas = view.areas;
+							break;
+						}
+					}
+					if (areas == null){
+						sendMessage("warning","Unable to provide area list for property '"+property.label+"' view '"+viewName+"' not found");
+						html+='	<input class="form-control form-control-sm" type="text" id="createItemAdditionalProperty'+p+'"'+required+'/>';
+					} else {
+						var area;
+						html += '<select class="form-control form-control-sm" type="text" id="createItemAdditionalProperty'+p+'"'+required+'>';
+						for (var a = 0; a < areas.length; a++){
+							area = areas[a];
+							html += '<option value="'+area.id+'">'+area.name+'</option>';
+						}
+						html += '</select>';
+					}
+				} else if (property.type.startsWith('list(')){
+					var valueList = property.type.substring('list('.length,property.type.length-1);
+					valueList = valueList.split(",");
+					var value;
+					html += '<select class="form-control form-control-sm" type="text" id="createItemAdditionalProperty'+p+'"'+required+'>';
+					for (var a = 0; a < valueList.length; a++){
+						value = valueList[a];
+						html += '<option value="'+value+'">'+value+'</option>';
+					}
+					html += '</select>';
+				} else if (property.type == 'string'){
+					html+='	<input class="form-control form-control-sm" type="text" id="createItemAdditionalProperty'+p+'"'+required+'/>';
+				} else {
+					html+='	<input class="form-control form-control-sm" type="text" id="createItemAdditionalProperty'+p+'"'+required+'/>';
+					sendMessage("warning","Unsupported additionnal property type : '"+property.type+"', text type assumed");
+				}
+				html+='	</div>';
+				html+='</div>';
+			}
+			$("#createItemAdditionalProperties").html(html);
+		}
 		function createItemCancel(){
 			$("#createItem").panel().close();
 		}
@@ -75,9 +166,12 @@
 			var htmlClasses = "";
 			for (var cl = 0; cl < category.classes.length; cl++){
 				clazz = category.classes[cl];
-				htmlClasses += "<option value='"+clazz.id+"'>"+clazz.name+"</option>";
+				if (clazz.abstract == 'false'){
+					htmlClasses += "<option value='"+clazz.id+"'>"+clazz.name+"</option>";
+				}
 			}
 			$("#createItemClass").html(htmlClasses);
+			createItemApplyClass();
 		}
 		$(function() {
 			var html = "";
@@ -85,21 +179,24 @@
 			var clazz;
 			var htmlClasses = "";
 			var first = true;
-			for (var c = 0; c < itemCategories.length; c++){
-				category = itemCategories[c];
+			for (var c = 0; c < global.itemCategories.length; c++){
+				category = global.itemCategories[c];
 				categoriesById[category.id] = category;
 				html += "<option value='"+category.id+"'>"+category.name+"</option>";
 				for (var cl = 0; cl < category.classes.length; cl++){
 					clazz = category.classes[cl];
-					classesById[clazz.id] = clazz;
-					if (first){
-						htmlClasses += "<option value='"+clazz.id+"'>"+clazz.name+"</option>";
+					if (clazz.abstract == 'false'){
+						classesById[clazz.id] = clazz;
+						if (first){
+							htmlClasses += "<option value='"+clazz.id+"'>"+clazz.name+"</option>";
+						}
 					}
 				}
 				first = false;
 			}
 			$("#createItemCategory").html(html);
 			$("#createItemClass").html(htmlClasses);
+			createItemApplyClass();
 		});
 	</script>
 </body>
